Assignment 7/src/objects/API_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API_Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>This field is for assignment for custom metadata</description>
        <label>API_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>API_Setting</label>
    <pluralLabel>API_Settings</pluralLabel>
</CustomObject>